Fixing div alignment

--- a/styles/about.css
+++ b/styles/about.css
@@ -16,6 +16,10 @@ body {
     padding-bottom: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: inherit;
 }
 #bios h1{
     color: #C4F4FF;
@@ -23,23 +27,27 @@ body {
     text-align: star;
 }
 #bios img{
-    width: 357px;
-    height: 500px;
+    width: 25%;
+    height: 25%;
     border-radius: 15px;
     margin-right: 50px;
+    margin-left: 50px;
     flex-grow: 1;
 }
 #aleia_bio {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+    width: initial;
 }
 #carlos_bio {
+    padding-top: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items:center;
+    width: inherit;
 }
 #bios #info{
     background-color: #012960;
@@ -47,16 +55,14 @@ body {
     display: flex;
     flex-direction: column;
     padding: 15px 15px 15px 15px;
-}
-#carlos_bio {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: row;
+    width: 66%;
 }
 #buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    width: inherit;
+    align-self: center;
 }
 #heading {
     display: flex;
@@ -121,10 +127,6 @@ nav a {
     border-color: #FEC465;
     padding: 15px;
     text-transform: uppercase;
-    margin-left: 30px;
-    margin-right: 200px;
-    margin-top: 50px;
-    margin-bottom: 10px;
 }
 button:hover {
     background-color: #04BF68;
